<resources>
    <string name="app_name">GustieRides</string>
    <string name="wallPost_button">Wall Posts</string>
    <string name="safeRide_button">Safe Ride</string>
    <string name="gusBus_button">Gus Bus</string>
    <string name="landToAir_button">Land To Air</string>
    <string name="safe_ride_logo">Safe Ride Logo</string>
    <string name="safe_ride_info">A Campus Safety student employee will be available to give safe rides from
        specifically marked locations from November 1–April 1 6 p.m.–1 a.m., April 1–October 31
        7 p.m.–1 a.m. every night.</string>
    <string name="call_button">Call Us Now </string>
    <string name="landToAir_info">Mankato Land to Air Express offers shuttle service from the St. Peter
        Food Co-op in St. Peter to and from the Minneapolis/St. Paul International Airport. Gustavus
        students may pre-arrange pick up and drop off at 3 Flags on campus. For a reservation,
        contact Land to Air Express (507) 625-3977 or toll free at (888)-736-9190. This guarantees your
        seat on the shuttle. Gustavus students may purchase reduced priced tickets at the Information Desk
        for travel out of or into St. Peter.</string>
    <string name="landToAir_website">Complete Schedule</string>
    <string name="landToAir_logo">Land to Air Logo</string>
    <string name="landToAir_call">Call Land to Air</string>
    <string name="gusBus_info">Gus Bus will transport anyone that wants to travel anywhere in the Saint Peter area for free. \n
    Phone Number: (888) 880-4696 \n
    Hours of Operation: \n Wednesday: 10pm - 2am \n Friday and Saturday: 9pm - 2am \n
    Outside these specified times, students can use the St. Peter Transit to travel at
        prices listed on the website.</string>
    <string name="gusBus_call">Call Gus Bus</string>
    <string name="gusBus_landscape">Gus Bus will transport anyone that wants to travel \n anywhere in the Saint Peter area for free. \n
    Phone Number: (888) 880-4696 \n
    Hours of Operation: \n Wednesday: 10pm - 2am \n Friday and Saturday: 9pm - 2am \n
    Outside these specified times, students can use the St. Peter \n Transit to travel at
        prices listed on the website.</string>

</resources>
